--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   getwidget: ^1.2.4
+  provider: ^4.3.2+3
+  http: ^0.12.2
   lottie: ^0.7.0+1
   flutter_swiper: ^1.1.6  
 
